[package]
name = "ledger-rs-lib"
description="A Ledger implementation in Rust"
version = "0.1.0"
edition = "2021"
authors = ["Alen Šiljak <dev@alensiljak.eu.org>"]
license="AGPL-3.0"
repository = "https://github.com/ledger-rs/ledger-rs-lib"
categories = ["finance"]
keywords = ["library", "finance"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.24"
env_logger = "0.10.0"
log = "0.4.17"
petgraph = "0.6.3"
rust_decimal = "1.29.1"
rust_decimal_macros = "1.29.1"
shell-words = "1.1.0"

[dev-dependencies]
test-log = "0.2.11"
