[package]
name = "ledger-rs-lib"
description="A Ledger implementation in Rust"
version = "0.6.0"
edition = "2021"
authors = ["Alen Šiljak <dev@alensiljak.eu.org>"]
license="AGPL-3.0"
repository = "https://github.com/ledger-rs/ledger-rs-lib"
categories = ["finance"]
keywords = ["library", "finance", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# For WASM:
# [target.'cfg(target_arch = "wasm32")'.lib]
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
env_logger = "0.10.0"
log = "0.4.19"
petgraph = "0.6.3"
rust_decimal = "1.31.0"
shell-words = "1.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.85"
wasm-bindgen-test = "*"

[dev-dependencies]
test-log = "0.2.11"
