[package]
name = "ledger-rs-lib"
description="A Ledger implementation in Rust"
version = "0.7.0"
edition = "2021"
authors = ["Alen Šiljak <dev@alensiljak.eu.org>"]
license="AGPL-3.0"
repository = "https://github.com/ledger-rs/ledger-rs-lib"
categories = ["finance"]
keywords = ["library", "finance", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# For WASM:
# [target.'cfg(target_arch = "wasm32")'.lib]
[lib]
crate-type = ["cdylib", "rlib"]

# [[bin]]
# filename = "ledger-rs-cli"


[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
env_logger = "0.10.0"
log = "0.4.20"
petgraph = "0.6.4"
rust_decimal = "1.32.0"
shell-words = "1.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.87"
wasm-bindgen-test = "0.3.37"

[dev-dependencies]
test-log = "0.2.13"
